fixed spacing

--- a/style.css
+++ b/style.css
@@ -94,12 +94,12 @@ body {
 #loading {
   display: none;
   align-self: center;
-  padding: 1.5rem;
+  padding: 2.5rem;
 }
 
 #results {
   display: none;
-  margin-top: 8rem;
+  margin-top: 4rem;
   color: white;
   text-align: center;
   font-size: 1.2rem;
